mythtv (2:0.24.0+fixes.20111207.40f3bae-0ubuntu2) UNRELEASED; urgency=low

  [ Ryan Davies ]
  * Fix bad quote escaping on mythtv-database postinst.  (LP: #829066)

  [ Mario Limonciello ]
  * Use gnome-session-quit if gnome-session-save isn't found.  (LP: #908315)

 -- Mario Limonciello <Mario_Limonciello@Dell.com>  Thu, 08 Dec 2011 10:10:23 -0600

mythtv (2:0.24.0+fixes.20111207.40f3bae-0ubuntu1) precise; urgency=low

  [ Mario Limonciello ]
  * debian/rules:
    - Don't modify mythtv/VERSION at all during build.  Only use 
      debian/DESCRIBE and restore mythtv/VERSION at end of build.
  * Enable crystal HD support.
  * Exclude all vcs's when building a tarball.
  * New upstream checkout (40f3bae)
  * >>Upstream changes since last upload (1de0431):
  * [40f3bae] Refs #6516. Fix a regression caused by [21445] aka
    [2fdeb3fc].
  * [c4ee599] Catch first frame corrupting unsigned count
  * [f5fd11f] Merge branch 'fixes/0.24' of github.com:MythTV/mythtv into
    fixes/0.24
  * [9f9dcf5] Add a UK fixup to remove "All New To 4Music!" which is
    breaking proper creation of subtitles and therefore duplicate
    matching.
  * [07b1cc1] Allows to change the ALSA buffer size
  * [088335b] Fix DVD and Blu Ray seeking.
  * [31e9528] Add @ to valid chars on mythfrontend network control
    command line.
  * [2b55759] OSD: Fix screen ordering again.
  * [4299903] libdvdread: fix compilation for ifo_read.c
  * [b1ff37e] libdvdread: backport upstream changesets r1232 and r1234.
  * [8b2c972] Fix the Danish virtual keyboard by correcting the ISO-code
    in its filename. (cherry picked from commit
    48185237a59b4fd00eb100ebe713873e74a1c479)
  * [5da2367] Fixed error with 'UTC' dates and some code format clean up
  * [19a63d4] Allow bad Metadata tags to be bypassed
  * [fdfc989] Correct copy/paste error in postroll commercial detection
  * [347ff57] MythRenderOpenGL: Add glu.h header.
  * [274470c] Fix AAC/LATM playback for streams with changing config